// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WidgetTextUpdate displays text 1`] = `
<WithStyles(Typography)
  className="WidgetTextUpdate-textUpdate-1"
  noWrap={true}
>
  Hello World
   
</WithStyles(Typography)>
`;

exports[`WidgetTextUpdate displays with units 1`] = `
<WithStyles(Typography)
  className="WidgetTextUpdate-textUpdate-1"
  noWrap={true}
>
  1.21
   
  GW
</WithStyles(Typography)>
`;
